--- a/index.html
+++ b/index.html
@@ -4,18 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/37f7b73249.js" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="mystyles/influencer-gear.css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <h3>Influencer products</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log In</a></li>
+                <li><a href=""><img src="images/magnifying-glass-solid.svg" alt=""></a></li>
+                <li><a href=""><img src="images/cart-shopping-solid.svg" alt=""></a></li>
+            </ul>
+        </nav>
+        <section class="banner">
+            <div class="banner-content">
+                <h2>Start your Journey as Influencer</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn-primary">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="banner-img">
+                <img class="circle" src="images/Circle design.svg" alt="">
+                <img class="camera" src="images/main-camera.png" alt="">
+            </div>
+        </section>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
