--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     
     <link rel="stylesheet" href="mystyles/influencer-gear.css">
 </head>
-<body>
+<body> 
+    <!--Header Section Start-->
     <header>
+        <!--Nav Section-->
         <nav>
             <h3>Influencer products</h3>
             <ul>
@@ -24,6 +26,7 @@
                 <li><a href=""><img src="images/cart-shopping-solid.svg" alt=""></a></li>
             </ul>
         </nav>
+        <!--Banner Section-->
         <section class="banner">
             <div class="banner-content">
                 <h2>Start your Journey as Influencer</h2>
@@ -36,8 +39,89 @@
             </div>
         </section>
     </header>
+    <!--Header Section End-->
     <main>
+        <!--Market Places Logo-->
+        <section class="market-logo">
+            <div class="logo"><img src="logos/Alibaba.svg" alt=""></div>
+            <div class="logo"><img src="logos/Amazon.svg" alt=""></div>
+            <div class="logo"><img src="logos/Daraz.pk Logo.svg" alt=""></div>
+            <div class="logo"><img src="logos/Ebay.svg" alt=""></div>
+            <div class="logo"><img src="logos/Rakuten.svg" alt=""></div>
+            <div class="logo"><img src="logos/Walmart.svg" alt=""></div>
+            <div class="logo"><img src="logos/Target.svg" alt=""></div>
+        </section>
 
+        <!--Collection Section-->
+        <section class="collection">
+            <h3>Popular Collection</h3>
+            <div class="product-container">
+                <div class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <p>star</p>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="product">
+                    <img src="images/mic.png" alt="">
+                    <h2>microphone</h2>
+                    <h3>$120.25</h3>
+                    <p>star</p>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="product">
+                    <img src="images/airpod.png" alt="">
+                    <h2>Airbuds</h2>
+                    <h3>$100.00</h3>
+                    <p>star</p>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="product">
+                    <img src="images/drone.png" alt="">
+                    <h2>Drone</h2>
+                    <h3>$980.25</h3>
+                    <p>star</p>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="product">
+                    <img src="images/lights.png" alt="">
+                    <h2>Light Setup</h2>
+                    <h3>$1200.00</h3>
+                    <p>star</p>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="product">
+                    <img src="images/setup.png" alt="">
+                    <h2>Photoshoot set</h2>
+                    <h3>$820.40</h3>
+                    <p>star</p>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="product">
+                    <img src="images/camera.png" alt="">
+                    <h2>Vlogging Camera</h2>
+                    <h3>$1800.80</h3>
+                    <p>star</p>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="product">
+                    <img src="images/single-light.png" alt="">
+                    <h2>Green Screen</h2>
+                    <h3>$25.48</h3>
+                    <p>star</p>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="product">
+                    <img src="images/action.png" alt="">
+                    <h2>Action Camera</h2>
+                    <h3>$380.00</h3>
+                    <p>star</p>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            
+        </section>
     </main>
     <footer>
 
