--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
             </div>
             
         </section>
+
+        <!--Featured Products Section-->
+        <section class="featured">
+            <div class="featured-img">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="featured-content">
+                <h3>Featured products at one place</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn-secondary">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <!--Footer Section-->
+        <div class="footer-content">
+            <h3>Influencer products</h3>
+            <p>Copyright © 2020  influencer products</p>
+            <p>All rights reserved</p>
+            <div class="footer-icon">
+                <img class="icon" src="social-media/instagram-brands-solid.svg" alt="">
+                <img class="icon" src="social-media/dribbble-brands-solid.svg" alt="">
+                <img class="icon" src="social-media/twitter-brands-solid.svg" alt="">
+                <img class="icon" src="social-media/youtube-brands-solid.svg" alt="">
+            </div>
+        </div>
+    </footer>
     </main>
     <footer>
 
