--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/37f7b73249.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="mystyles/influencer-gear.css">
@@ -54,70 +56,70 @@
 
         <!--Collection Section-->
         <section class="collection">
-            <h3>Popular Collection</h3>
+            <h1>Popular Collection</h3>
             <div class="product-container">
                 <div class="product">
                     <img src="images/tripod.png" alt="">
                     <h2>Flex Tripod</h2>
                     <h3>$50.48</h3>
-                    <p>star</p>
-                    <p>Wordwide shifting available Buyers protection possible!</p>
+                    <p class="rating">star</p>
+                    <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/mic.png" alt="">
                     <h2>microphone</h2>
                     <h3>$120.25</h3>
-                    <p>star</p>
-                    <p>Wordwide shifting available Buyers protection possible!</p>
+                    <p class="rating">star</p>
+                    <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/airpod.png" alt="">
                     <h2>Airbuds</h2>
                     <h3>$100.00</h3>
-                    <p>star</p>
-                    <p>Wordwide shifting available Buyers protection possible!</p>
+                    <p class="rating">star</p>
+                    <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/drone.png" alt="">
                     <h2>Drone</h2>
                     <h3>$980.25</h3>
-                    <p>star</p>
-                    <p>Wordwide shifting available Buyers protection possible!</p>
+                    <p class="rating">star</p>
+                    <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/lights.png" alt="">
                     <h2>Light Setup</h2>
                     <h3>$1200.00</h3>
-                    <p>star</p>
-                    <p>Wordwide shifting available Buyers protection possible!</p>
+                    <p class="rating">star</p>
+                    <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/setup.png" alt="">
                     <h2>Photoshoot set</h2>
                     <h3>$820.40</h3>
-                    <p>star</p>
-                    <p>Wordwide shifting available Buyers protection possible!</p>
+                    <p class="rating">star</p>
+                    <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/camera.png" alt="">
                     <h2>Vlogging Camera</h2>
                     <h3>$1800.80</h3>
-                    <p>star</p>
-                    <p>Wordwide shifting available Buyers protection possible!</p>
+                    <p class="rating">star</p>
+                    <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/single-light.png" alt="">
                     <h2>Green Screen</h2>
                     <h3>$25.48</h3>
-                    <p>star</p>
-                    <p>Wordwide shifting available Buyers protection possible!</p>
+                    <p class="rating">star</p>
+                    <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/action.png" alt="">
                     <h2>Action Camera</h2>
                     <h3>$380.00</h3>
-                    <p>star</p>
-                    <p>Wordwide shifting available Buyers protection possible!</p>
+                    <p class="rating">star</p>
+                    <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
             </div>
             
@@ -135,9 +137,8 @@
             </div>
         </section>
     </main>
-
+<!--Footer Section-->
     <footer>
-        <!--Footer Section-->
         <div class="footer-content">
             <h3>Influencer products</h3>
             <p>Copyright © 2020  influencer products</p>
