--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                     <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
             </div>
+            <div class="see-more">
+                <a href="">See More <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
             
         </section>
 
