--- a/index.html
+++ b/index.html
@@ -62,63 +62,63 @@
                     <img src="images/tripod.png" alt="">
                     <h2>Flex Tripod</h2>
                     <h3>$50.48</h3>
-                    <p class="rating">star</p>
+                    <p class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/mic.png" alt="">
                     <h2>microphone</h2>
                     <h3>$120.25</h3>
-                    <p class="rating">star</p>
+                    <p class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/airpod.png" alt="">
                     <h2>Airbuds</h2>
                     <h3>$100.00</h3>
-                    <p class="rating">star</p>
+                    <p class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/drone.png" alt="">
                     <h2>Drone</h2>
                     <h3>$980.25</h3>
-                    <p class="rating">star</p>
+                    <p class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/lights.png" alt="">
                     <h2>Light Setup</h2>
                     <h3>$1200.00</h3>
-                    <p class="rating">star</p>
+                    <p class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/setup.png" alt="">
                     <h2>Photoshoot set</h2>
                     <h3>$820.40</h3>
-                    <p class="rating">star</p>
+                    <p class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/camera.png" alt="">
                     <h2>Vlogging Camera</h2>
                     <h3>$1800.80</h3>
-                    <p class="rating">star</p>
+                    <p class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/single-light.png" alt="">
                     <h2>Green Screen</h2>
                     <h3>$25.48</h3>
-                    <p class="rating">star</p>
+                    <p class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
                 <div class="product">
                     <img src="images/action.png" alt="">
                     <h2>Action Camera</h2>
                     <h3>$380.00</h3>
-                    <p class="rating">star</p>
+                    <p class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
                     <p class="description">Wordwide shifting <br>available <br>Buyers protection possible!</p>
                 </div>
             </div>
